Update link styling to prevent overflow in main content

--- a/_styles.css
+++ b/_styles.css
@@ -31,7 +31,7 @@
 }
 
 /* Links in posts overflow */
-main ul a {
+main.content ul a {
     white-space: pre-wrap;
     word-wrap: break-word;
 }
